# uat

./: .env.example  README.md  cli  pytest.ini  requirements.txt
basecode/: pyproject.toml
basecode/src/: Version.py  ___main___.py  __main__.py
basecode/src/Console/Commands/: ApiTestCommand.py  CliTestCommand.py  MobileTestCommand.py  PerformanceTestCommand.py  VersionCommand.py  WebTestCommand.py
basecode/src/Helpers/: ApplicationPath.py  BasePath.py  LogNameSpace.py  NameSpace.py  ReportNameSpace.py  SpaceApiPath.py  SpaceCliPath.py  SpaceMobilePath.py  SpacePerformPath.py  SpaceWebPath.py
basecode/tests/____mobile____/config/: __init__.py
basecode/tests/____mobile____/src/: AndroidTestCase.py  IOSTestCase.py
basecode/tests/____mobile____/tests/: AndroidMobileTest.py  IOSMobileTest.py
basecode/tests/____web____/: pytest.ini
basecode/tests/____web____/config/: __init__.py
basecode/tests/____web____/src/: TestCase.py
basecode/tests/____web____/tests/: WebTest.py
basecode/tests/___api___/config/: __init__.py
basecode/tests/___api___/src/: TestCase.py
basecode/tests/___api___/tests/: ApiTest.py
basecode/tests/__cli__/config/: __init__.py
basecode/tests/__cli__/src/: TestCase.py
basecode/tests/__cli__/tests/: CliTest.py
basecode/tests/_perform_/config/: __init__.py
basecode/tests/_perform_/src/: api.py  web.py
logs/: .gitignore
